# xllm

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  MINIMAX_CANN85_BASELINE.md  README.md  README_ict_final.md  README_zh.md  RELEASE.md  env.py  mkdocs_en.yml  rejection_sample.py  setup.py  start_sp.sh  start_sp_tp.sh  start_tp.sh  test_xllm.py  utils.py  vcpkg.json  version.txt  xllm-w8a8-quant-vit-adaptation.patch
scripts/: run.sh  (+1 more)
tests/core/framework/block/: CMakeLists.txt  block_concurrency_test.cpp  block_group_test.cpp  block_manager_test.cpp  cache_group_policy_test.cpp  cache_group_spec_builder_test.cpp  composite_block_manager_test.cpp  composite_prefix_policy_test.cpp  concurrent_block_manager_test.cpp  concurrent_composite_block_manager_test.cpp  group_composite_block_manager_test.cpp  sequence_block_allocator_test.cpp  single_block_manager_test.cpp
tests/core/framework/kv_cache/: CMakeLists.txt  embedding_cache_test.cpp  kv_cache_estimation_test.cpp  kv_cache_test.cpp
tests/core/kernels/dcu/: CMakeLists.txt  norm_test.cpp
tests/core/platform/: CMakeLists.txt  shared_vmm_allocator_test.cpp
tests/core/platform/dcu/: CMakeLists.txt  device_dcu_test.cpp  shared_vmm_allocator_dcu_test.cpp
xllm/core/framework/state_dict/: CMakeLists.txt  rec_content_dict.cpp  rec_content_dict.h  rec_vocab_dict.cpp  rec_vocab_dict.h  rec_vocab_dict_test.cpp  state_dict.cpp  state_dict.h  utils.cpp
xllm/core/kernels/mlu/: CMakeLists.txt  active.cpp  attention.cpp  causal_conv1d_fn.cpp  causal_conv1d_update_decode.cpp  chunk_gated_delta_rule.cpp  chunk_gated_delta_rule.h  flash_attention.cpp  fused_gdn_gating.cpp  fused_layernorm.cpp  fused_moe.cpp  fused_recurrent_gated_delta_rule.cpp  fused_recurrent_gated_delta_rule_packed_decode.cpp  gated_layer_norm.cpp  gemma_rms_norm.cpp  matmul.cpp  mlu_ops_api.h  moe_all2all.cpp  random_sample.cpp  rejection_sample.cpp  reshape_paged_cache.cpp  rope.cpp  scaled_matmul.cpp  single_query_cached_kv_attn.cpp  torch_ops_api.h  utils.h
xllm/core/layers/: CMakeLists.txt  base_layer.cpp  base_layer.h  config.h  deepseek_v2_decoder_layer.h  deepseek_v4_decoder_layer.cpp  deepseek_v4_decoder_layer.h  embedding.h  glm4_decoder_layer.h  glm4_vision_encode_layer.h  linear.cpp  linear.h  linear_impl.cpp  linear_impl.h  normalization.h  onerec_block_layer.h  oxygen_vision_layer.cpp  oxygen_vision_layer.h  qwen2_5_vision_layer.cpp  qwen2_5_vision_layer.h  qwen2_decoder_layer.cpp  qwen2_decoder_layer.h  qwen2_vision_encode_layer.h  qwen2dot5_vision_decode_layer.h  qwen35_decoder_layer.cpp  qwen35_decoder_layer.h  qwen35_moe_decoder_layer.cpp  qwen35_moe_decoder_layer.h  qwen3_5_decoder_layer.h  qwen3_decoder_layer.h  qwen3_moe_decoder_layer.cpp  qwen3_moe_decoder_layer.h  qwen3_vision_layer.h  weight_utils.cpp  weight_utils.h
xllm/core/layers/ascend/: CMakeLists.txt  deepseek_v2_decoder_layer.cpp  deepseek_v2_decoder_layer.h
xllm/core/layers/common/: CMakeLists.txt  add_matmul.cpp  add_matmul.h  attention.cpp  attention.h  attention_metadata.cpp  attention_metadata.h  attention_metadata_builder.cpp  attention_metadata_builder.h  deep_ep.cpp  deep_ep.h  dense_mlp.cpp  dense_mlp.h  dp_utils.cpp  dp_utils.h  dsa_metadata.h  dsa_metadata_builder.cpp  dsa_metadata_builder.h  dsa_topk_share_plan.h  fused_moe.cpp  fused_moe.h  fused_moe_base.h  gated_delta_net.cpp  gated_delta_net.h  indexer.cpp  indexer.h  linear.cpp  linear.h  lm_head.h  moe_fused_topk.cpp  moe_fused_topk.h  moe_weight_loader_helper.h  oxygen_vision_attention.cpp  oxygen_vision_attention.h  partial_rotary_embedding.cpp  pos_embedding.h  quant_linear_helpers.h  qwen2_5_vision_layer.cpp  qwen2_5_vision_layer.h  qwen2_attention.cpp  (+17 more)
xllm/core/layers/cuda/: CMakeLists.txt  attention.cpp  attention.h  attention_metadata.h  base_attention.cpp  base_attention.h  flashinfer_attention.cpp  flashinfer_planinfo.cpp  flashinfer_planinfo.h  flashinfer_workspace.cpp  flashinfer_workspace.h  fused_moe.cpp  fused_moe.h  xattention.cpp  xattention.h  xattention_planinfo.cpp  xattention_planinfo.h  xattention_test.cpp  xattention_workspace.cpp  xattention_workspace.h
xllm/core/layers/dcu/: CMakeLists.txt  attention.cpp  attention.h  flash_attention.cpp  fused_moe.cpp  fused_moe.h
xllm/core/layers/ilu/: CMakeLists.txt  attention.cpp  attention.h  attention_metadata.h  fused_moe.cpp  fused_moe.h  utils.h
xllm/core/layers/mlu/: CMakeLists.txt  attention.cpp  attention.h  attention_metadata.h  deepseek_v2_attention.cpp  deepseek_v2_attention.h  deepseek_v2_attention_sp.cpp  deepseek_v2_decoder_layer_impl.cpp  deepseek_v2_decoder_layer_impl.h  deepseek_v2_sparse_moe_block.cpp  deepseek_v2_sparse_moe_block.h  deepseek_v32_sp_context.h  deepseek_v32_sp_metadata.h  deepseek_v32_sp_plan.h  fuse_norm.cpp  fuse_norm.h  fused_moe.cpp  fused_moe.h  fused_moe_all2all.cpp  fused_moe_base.cpp  indexer.cpp  indexer.h  linalg.cpp  linalg.h  linear_impl.cpp  linear_impl.h  moe_gate.cpp  moe_gate.h  moe_softplus_topk.cpp  qwen3_5_decoder_layer.cpp  qwen3_5_decoder_layer.h  qwen3_5_fused_moe.cpp  qwen3_5_fused_moe.h  qwen3_attention.cpp  qwen3_attention.h  qwen3_decoder_layer.cpp  qwen3_decoder_layer.h  qwen3_mlp.cpp  qwen3_mlp.h  qwen3_moe_decoder_layer.cpp  (+7 more)
xllm/core/layers/musa/: CMakeLists.txt  attention.cpp  attention.h  musa_attention.cpp  musa_attention.h  musa_layer_base.h  musa_lm_head_impl.cpp  musa_lm_head_impl.h  musa_mlp.cpp  musa_mlp.h  musa_qwen3_decoder_layer_impl.cpp  musa_qwen3_decoder_layer_impl.h
xllm/core/layers/npu/: CMakeLists.txt  atb_base.cpp  atb_base.h  block_copy.cpp  block_copy.h  deepseek_v2_decoder_layer.cpp  deepseek_v2_decoder_layer.h  deepseek_v32_decoder_layer.h  fused_moe.cpp  glm4_decoder_layer.h  glm4_vision_encode_layer.h  llama_decoder_layer.h  multi_head_attention.cpp  npu_base_layer.cpp  npu_base_layer.h  npu_block_copy_impl.h  npu_column_parallel_linear_impl.cpp  npu_column_parallel_linear_impl.h  npu_deepseek_v2_decoder_layer_impl.cpp  npu_deepseek_v2_decoder_layer_impl.h  npu_deepseek_v32_decoder_layer_impl.cpp  npu_deepseek_v32_decoder_layer_impl.h  (+55 more)
(+1559 files in other folders)
