include(cc_library)

if(USE_NPU)
  include_directories(
    ${CMAKE_SOURCE_DIR}/third_party/spdlog/include
  )
  add_subdirectory(npu)
else()
  if(USE_MLU)
    add_subdirectory(mlu)
  elseif(USE_ILU)
    add_subdirectory(ilu)
  else()
    add_subdirectory(cuda)
  endif()
endif()

add_subdirectory(common)

cc_library(
  NAME
    attention_mask
  HDRS
    common/attention_mask.h
  SRCS
    common/attention_mask.cpp
  DEPS
    :state_dict
    :block
    :kv_cache
    :prefix_cache
    glog::glog
    gflags::gflags
    torch
)

if(NOT USE_NPU)
cc_library(
  NAME
    layers
  HDRS
    qwen2_decoder_layer.h
    qwen2_vision_layer.h
    qwen2_5_vision_layer.h
    qwen3_vision_layer.h
    qwen3_decoder_layer.h
    qwen3_moe_decoder_layer.h
  SRCS
    qwen2_vision_layer.cpp
    qwen2_decoder_layer.cpp
    qwen2_5_vision_layer.cpp
    qwen3_vision_layer.cpp
    qwen3_moe_decoder_layer.cpp
  DEPS
    :common_layers
    :parallel_state
    :state_dict
    :kv_cache
    :attention_mask
    torch
)
endif()