include(cc_library)

cc_library(
  NAME
    common_layers
  HDRS
    $<$<NOT:$<BOOL:${USE_NPU}>>:qwen2_attention.h>
    $<$<NOT:$<BOOL:${USE_NPU}>>:qwen2_vision_attention.h>
    rms_norm.h
    rotary_embedding.h
    rotary_embedding_util.h
    fused_moe.h
    dense_mlp.h
    linear.h
    $<$<NOT:$<BOOL:${USE_NPU}>>:word_embedding_impl.h>
    $<$<NOT:$<BOOL:${USE_NPU}>>:indexer.h>
    $<$<NOT:$<BOOL:${USE_NPU}>>:deep_ep.h>
    activation.h
    attention_metadata.h
  SRCS
    $<$<NOT:$<BOOL:${USE_NPU}>>:qwen2_attention.cpp>
    $<$<NOT:$<BOOL:${USE_NPU}>>:qwen2_vision_attention.cpp>
    rms_norm.cpp
    rotary_embedding.cpp
    rotary_embedding_util.cpp
    fused_moe.cpp
    dense_mlp.cpp
    linear.cpp
    $<$<NOT:$<BOOL:${USE_NPU}>>:word_embedding_impl.cpp>
    $<$<NOT:$<BOOL:${USE_NPU}>>:indexer.cpp>
    $<$<NOT:$<BOOL:${USE_NPU}>>:deep_ep.cpp>
    activation.cpp
    attention_metadata.cpp
  DEPS
    "-Wl,--whole-archive"
    "-Wl,--no-whole-archive"
    :kv_cache
    :prefix_cache
    :block
    :parallel_state
    :state_dict
    :model
    :kernels
    glog::glog
    gflags::gflags
    torch
    :platform
    $<$<BOOL:${USE_MLU}>:mlu_layers>
    $<$<BOOL:${USE_CUDA}>:cuda_layers>
    $<$<BOOL:${USE_ILU}>:ilu_layers>
)

if(NOT USE_NPU)
add_subdirectory(tests)
endif()